# logfilter

./: .gitignore  MANIFEST.in  Makefile  README  logfilter.py  pyproject.toml  setup.cfg  tox.ini
doc/: Usage.rst  docutils.conf  logfilter.1.rst
requirements/: pylint.requirements.txt
test/: test_logfilter.py  test_main.py
