[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "logfilter"
dynamic = ["version"]
authors = [{name = "Dylan Maltby"}]
license = {file = "LICENSE"}
description = "Filter some logs using AWK"
readme = {file = "README", content-type = "text/plain"}
requires-python = ">=3.9"
classifiers = [
	"License :: OSI Approved :: Apache Software License",
]

[project.scripts]
logfilter = "logfilter:main"

[tool.flit.sdist]
include = [
	"Makefile",
	"doc/",
	"test/",
	"tox.ini",
]

[tool.flit.external-data]
directory = "data"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["logfilter", "test.test_main"]
# Turn on strict type checking for select modules.
# These are all "mypy --strict" options listed in
# https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
# with the exception of warn_redundant_casts and warn_unused_configs,
# which are global.
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true

[tool.pylint.main]
py-version = "3.9"

[tool.pylint.basic]
docstring-min-length = 4

[tool.pylint.format]
max-line-length = 100

[tool.pylint.string]
check-quote-consistency = true
check-str-concat-over-line-jumps = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
