[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "logfilter"
dynamic = ["version"]
authors = [{name = "Dylan Maltby"}]
license = {file = "LICENSE"}
description = "Filter some logs using AWK"
readme = {file = "README", content-type = "text/plain"}
requires-python = ">=3.9"
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]

[project.scripts]
logfilter = "logfilter:main"

[dependency-groups]
test = [
	"pytest>=6,<8.5",
]

[tool.flit]
external-data.directory = "data"
sdist.include = [
	"Makefile",
	"doc/",
	"test/",
	"tox.ini",
]

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pylint]
basic.docstring-min-length = 4
format.max-line-length = 100
main.py-version = "3.9"
string.check-quote-consistency = true
string.check-str-concat-over-line-jumps = true

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
