[metadata]
name = logfilter
version = attr: logfilter.__version__
author = Dylan Maltby
license = Apache Software License
license_files = LICENSE
description = Filter some logs using AWK

[options]
include_package_data = True
py_modules = logfilter
python_requires = >=3.9

[options.entry_points]
console_scripts =
    logfilter = logfilter:main
