[metadata]
name = logfilter
version = attr: logfilter.__version__
author = Dylan Maltby
license = Apache Software License
license_files = LICENSE
description = Filter some logs using AWK
long_description = file: README
long_description_content_type = text/plain

[options]
include_package_data = True
py_modules = logfilter
python_requires = >=3.9

[options.entry_points]
console_scripts =
    logfilter = logfilter:main
